@@ -12,7 +12,10 @@ typedef struct dir_list{
 } DIR_LIST;
 
 DIR_LIST *init_dir_node(const char *);
-int link_dir_node(DIR_LIST *, DIR_LIST **);
+/* The use of static 1 tells the compiler that this should be non-null
+ * (an array of size 1 or more)
+ */
+int link_dir_node(DIR_LIST [static 1], DIR_LIST **);
 void free_dir_list(DIR_LIST *);
 
 #endif
