@@ -1,4 +1,8 @@
 2017-06-28	SilverNexus
+	* dir_list.c: Optimize declaration to assume non-null pointer passed.
+	* dir_list.h: Declaration tweak to expose tweak in dir_list.c
+	* fileperuser_search.c: Refactored a loop to compare on zero in
+	  fileperuser_memmem_brute.
 	* CMakeLists.txt: Remove defines for allowing use of nftw, since we don't
 	  need it anymore.
 
